Bugfix devicon visibility in chromium

--- a/theme/sass/util/devicon.scss
+++ b/theme/sass/util/devicon.scss
@@ -1,13 +1,12 @@
 [class^="devicon-"],
 [class*=" devicon-"] {
-  display: block;
-  // height: 3rem;
+  display: flex;
 }
 
 [class^="devicon-"]::before,
 [class*=" devicon-"]::before {
-  display: flex;
-  // height: 3rem;
+  display: inline-block;
+  height: 3rem;
   width: 3rem;
 }
 
